modifying index.html file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
     <body>
         <h1>This is a Heading</h1>
-        <p>Welcome to this website</p>
+        <p>Welcome to this html file</p>
     </body>
 </html>
