--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <title>Hello World</title>
+        <title>Hello World </title>
+        <title>Welcome to capegemini  </title>
     </head>
 
     <body>
         <h1>This is a Heading</h1>
         <p>Welcome to this html file</p>
-        <p> This file is modified by Isha Agrawal <p>
+  
     </body>
 </html>
