--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <p>Welcome to this html file</p>
         <p> This file is modified by Vishakha Yadav. <p>
         <p> this file is modified by Raj Mohan.</p>
-
+        <p> This file is modified by Adarsh Patel.</p>
+        
     </body>
 </html>
